--- a/OneDo/View/Modals/TodoEditor.xaml
+++ b/OneDo/View/Modals/TodoEditor.xaml
@@ -1,4 +1,4 @@
-﻿<v:FlyoutBase x:Class="OneDo.View.Flyouts.TodoEditor"
+﻿<v:ModalBase x:Class="OneDo.View.Modals.TodoEditor"
               xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
               xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
               xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -40,10 +40,9 @@
                     <AppBarButton.Flyout>
                         <Flyout>
                             <StackPanel>
-                                <TextBlock Margin="0,0,0,10" Text="Are you sure?" />
-                                <Button HorizontalAlignment="Stretch"
-                                        Command="{x:Bind VM.DeleteCommand, Mode=OneWay}"
-                                        Content="Delete" />
+                                <TextBlock Margin="0,0,0,10" Text="To-do will be deleted. Do you want to continue?" />
+                                <Button Command="{x:Bind VM.DeleteCommand, Mode=OneWay}"
+                                        Content="Yes, delete to-do" />
                             </StackPanel>
                         </Flyout>
                     </AppBarButton.Flyout>
@@ -61,4 +60,4 @@
             </CommandBar.PrimaryCommands>
         </CommandBar>
     </Grid>
-</v:FlyoutBase>
+</v:ModalBase>
