--- a/OneDo/View/Modals/TodoEditor.xaml
+++ b/OneDo/View/Modals/TodoEditor.xaml
@@ -1,12 +1,15 @@
 ﻿<v:ModalBase x:Class="OneDo.View.Modals.TodoEditor"
-              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-              xmlns:v="using:OneDo.View"
-              d:DesignHeight="640"
-              d:DesignWidth="360"
-              mc:Ignorable="d">
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:i="using:Microsoft.Xaml.Interactivity"
+             xmlns:ic="using:Microsoft.Xaml.Interactions.Core"
+             xmlns:im="using:Microsoft.Xaml.Interactions.Media"
+             xmlns:v="using:OneDo.View"
+             d:DesignHeight="640"
+             d:DesignWidth="360"
+             mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.RowDefinitions>
@@ -38,11 +41,10 @@
                 </AppBarButton>
                 <AppBarButton Label="Delete" Visibility="{x:Bind VM.IsNew, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=!}">
                     <AppBarButton.Flyout>
-                        <Flyout>
+                        <Flyout PickerFlyoutBase.Title="Test">
                             <StackPanel>
                                 <TextBlock Margin="0,0,0,10" Text="To-do will be deleted. Do you want to continue?" />
-                                <Button Command="{x:Bind VM.DeleteCommand, Mode=OneWay}"
-                                        Content="Yes, delete to-do" />
+                                <Button Command="{x:Bind VM.DeleteCommand, Mode=OneWay}" Content="Yes, delete to-do" />
                             </StackPanel>
                         </Flyout>
                     </AppBarButton.Flyout>
